sass/screen.scss
/* ... */
.illustration1 {
  @include retina-sprite(illustration1);
}

.illustration2 {
  @include retina-sprite(illustration2);
}
.illustration3 {
  @include retina-sprite(illustration3);
}

#sponsor-wrapper{
  background-color: #32ab90;
  @include background-image(url(../img/footer_bg.jpg));
  background-repeat: repeat-x;
  background-position: left top;
}

.highlights{
  text-align: center;
  @media only screen and (max-width: 360px) {
    //padding: 0 10px;

  }
  h2{
    font-family: 'Oxygen', sans-serif;
    font-weight: 200;
    font-size: 40px;
  }
  .intro{
    font-family: 'Oxygen', sans-serif;
    font-weight: 200;
    font-size: 18px;


    @media only screen and (min-width: 768px) {
      max-width: 460px;
      margin: 4px auto 45px;
      display: block;
    }
  }

  &.love{
    h2{
      @media only screen and (min-width: 768px) {
        margin: 108px 0 30px;
      }
    }
  }

  &.sponsor{
    margin: 10px 0 20px;
    text-align: center;
    color: $white;
    @media only screen and (max-width: 360px) {

    }

    @media only screen and (min-width: 768px) {
      margin: 50px 0 70px;
    }

    h2{
      margin-bottom: 0;
    }
    a{
      color: $white;
      text-decoration: underline;
    }
  }

  .intro{
    font-family: 'Oxygen', sans-serif;
    font-weight: 200;
    font-size: 20px;
    @media only screen and (max-width: 360px) {
      font-size: 18px;
      line-height: 1.4;
      padding: 0 10px;
    }

    @media only screen and (min-width: 768px) {
      max-width: 760px;
      margin: 0 auto;
      display: block;
      line-height: 1.8;
    }
  }
}

.clevertech{
  @include retina-sprite(clevertech);
  display: block;
  margin: 0 auto;
  @media only screen and (max-width: 360px) {
    @include retina-sprite(clevertechsmall);
    width: 148px;
    height: 48px;
    //max-width: 300px;
    //width: 300px;
    //@include background-size(cover); // multiple: comma-delimited
  }
}

#wrap {
  height: auto;
  margin: 0 auto -160px;
  min-height: 100%;
  padding: 0 0 160px;
}

#footer {
  margin-top: 10px;
  height: 60px;
  margin: 50px 0;
}

#logo-small{
  @include retina-sprite(logosmall);
  display: inline-block;
  text-indent: -9999px;
  @media only screen and (max-width: 360px) {
    display: block;
    margin: 0 auto 10px;
  }
}

.nav-footer{
  @include horizontal-list(1em);
  display: inline;
  float: right;

  @media only screen and (max-width: 360px) {
    float: none;
    display: block;
    margin: 0 auto 10px;
    text-align: center;
  }

  @media only screen and (min-width: 768px) {
    @include horizontal-list(1.4em);
  }

  li{
    @media only screen and (max-width: 360px) {
      float: none;
      display: block;
      text-align: center;
      margin: 0;
      padding: 0;
    }
  }

  a{
    text-decoration: none;
    color: $bluelight;
    text-transform: uppercase;
    font-size: 12px;

    @media only screen and (min-width: 768px) {
      font-size: 14px;
    }
  }
}

.legal{
  margin: 5px 0;
  @media only screen and (max-width: 360px) {
    text-align: center;
  }
}

#download{
  text-align: center;

  .modal-header {
    border-bottom: none;
    padding: 15px;
  }

  h3{
    font-family: 'Oxygen', sans-serif;
    font-weight: 100;
    color: $blue;
    @media only screen and (min-width: 361px) {
      font-size: 45px;
    }
  }

  h4{
    font-family: 'Oxygen', sans-serif;
    font-weight: 100;
    color: #495e62;
    @media only screen and (min-width: 361px) {
      font-size: 20px;
      line-height: 1.9;
      margin: 25px 0 40px;
    }
  }

  .close {
    color: $green;
    opacity: 1;
  }
}

.frameworks{
  display: block;
  max-width: 70%;
  margin: 10px auto 50px;
  @include border-radius(5px);
  border:1px solid $bluelight;
  text-align: center;

  @media only screen and (max-width: 360px) {
    min-width: 260px;
  }
}

.framework-icons{
  margin: 10px auto;
  display: block;
}

.f-row{
  display: inline-block;
  text-align: center;
  @include pie-clearfix;
  width: 100%;

  &:nth-child(2){
    border-top:1px solid $bluelight;
    border-bottom:1px solid $bluelight;
  }

  &:hover{
    //@include box-shadow(2px 0 2px rgba(black,0.1)); // multiple: comma-delimited
  }
}

.node{
  @include retina-sprite(framework1);
}

.ruby{
  @include retina-sprite(framework2);
}

.php{
  @include retina-sprite(framework3);
}

#video{
  .modal-header {
    border-bottom: none;
    padding: 0;
  }

  .modal-body {
    padding: 0;
    margin: 0;
  }

  .close {
    color: $green;
    float: none;
    font-size: 21px;
    font-weight: bold;
    line-height: 1;
    opacity: 1;
    text-shadow: 0 1px 0 #FFFFFF;
    position: absolute;
    right: 5px;
    top: 0;
    z-index: 999;
    padding: 3px 10px 5px;
    background: black;
  }
}

}


.announcement {
  display: block;
  width: 100%;
  background-color: white;
  text-align: center;
  padding: 6px 0;
  margin: 0;
}
.announcement__label {
  display: inline-block;
  height: 24px;
  line-height:24px;
  text-transform: uppercase;
  border: 1px #00e675 solid;
  border-radius: 4px;
  padding: 0 6px 0 26px;
  margin-right: 6px;
  font-size: 11px;
  color: #00e675;
  background-image: url('../img/DesirePathLogo.svg');
  background-position: left 4px center;
  background-repeat: no-repeat;
  background-size: auto 16px;
}
.announcement p {
  font-size: 14px;
  margin: 0;
}
.announcement a, .announcement a:link, .announcement a:active, .announcement a:visited {
  font-weight: bold;
  color: #00e675 !important;
  text-transform: none !important;
  padding: 0 !important;
  font-size: 1em !important;
}
#wrap {
  position: relative;
}
.navbar {
  width: 100%;
  margin: 0 !important;
  position: absolute;
  top: 0;
}

